# simple-ddpm

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  ddpm_2d.ipynb  ddpm_2d.md  ddpm_2d.py  ddpm_2d_loop.py  ddpm_2d_new.py  ddpm_2d_old.ipynb  ddpm_2d_old.py  ddpm_image.ipynb  ddpm_image.py  ddpm_mnist.py  ddpm_mnist_flat.ipynb  ddpm_mnist_flat.py  ddpm_utils.py  index.html  looper.py  main.py  mkdocs.yml  models.py  pokemon.py  pyproject.toml  setup.sh  style.css  utils.py
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
configs/_2d/: base.py
configs/image/: base.py  cartoonset_1.py
docs/: index.md  notebooks
models/: mlp_mixer.py  simple_unet.py  unet_lucid.py  unet_stable.py
notebooks/: ddpm_2d.ipynb  ddpm_2d.md
notebooks/ddpm_2d/: index.html
scripts/: ddpm_2d.py  ddpm_image.py  ddpm_image_new.py
simple_ddpm/: processes.py  schedules.py  utils.py
simple_ddpm/models/: simple_cnn.py  unet_lucid2.py
simple_ddpm/scripts/: ddpm_image.py
